# image-overlay-tool

./: .gitignore  AGENTS.md  README.md  merge_logo_gui.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
image_overlay_tool/: __init__.py  cli.py  core.py  gui_qt.py  gui_tk.py  i18n.py
packaging/: README.md  image_overlay_tool.spec  prepare_icons.py
packaging/hooks/: hook-PySide6.QtGui.py
tests/: __init__.py  test_core.py
